--- a/Final/Views/Patients/Create.cshtml
+++ b/Final/Views/Patients/Create.cshtml
@@ -38,6 +38,16 @@
                 <span asp-validation-for="DateOfBirth" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="AddimisionDate" class="control-label"></label>
+                <input asp-for="AddimisionDate" class="form-control" />
+                <span asp-validation-for="AddimisionDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DischargeDate" class="control-label"></label>
+                <input asp-for="DischargeDate" class="form-control" />
+                <span asp-validation-for="DischargeDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="DoctorId" class="control-label"></label>
                 <input asp-for="DoctorId" class="form-control" />
                 <span asp-validation-for="DoctorId" class="text-danger"></span>
