--- a/Final/Views/Patients/Details.cshtml
+++ b/Final/Views/Patients/Details.cshtml
@@ -41,6 +41,18 @@
             @Html.DisplayFor(model => model.DateOfBirth)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.AddimisionDate)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.AddimisionDate)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.DischargeDate)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.DischargeDate)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DoctorId)
         </dt>
         <dd class = "col-sm-10">
