--- a/Final/Views/Patients/Index.cshtml
+++ b/Final/Views/Patients/Index.cshtml
@@ -14,6 +14,21 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+@using (Html.BeginForm("Index", "Patients", FormMethod.Get))
+{
+    <b>Search By:</b>
+    @Html.RadioButton("SearchBy", "Name", true)
+
+    <text>Patient Name</text>
+    @Html.RadioButton("SearchBy", "Address")
+
+    <text>Patient Address</text>
+    <br />
+
+    @Html.TextBox("search")
+    <input type="submit" value="Search" />
+}
 <table class="table">
     <thead>
         <tr>
@@ -31,6 +46,12 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.DateOfBirth)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.AddimisionDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DischargeDate)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Doctor.Name)
@@ -57,10 +78,16 @@
                 @Html.DisplayFor(modelItem => item.DateOfBirth)
             </td>
             <td>
-
-                    @Html.ActionLink(item.Doctor.Name, "Details", "Doctors", new { id = item.DoctorId }, null)
-
+                @Html.DisplayFor(modelItem => item.AddimisionDate)
             </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DischargeDate)
+            </td>
+           <td>
+
+                    @Html.ActionLink(item.Name, "Details", "Doctors", new { id = item.DoctorId }, null)
+
+            </td> 
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
