--- a/Final/Views/Visits/Index.cshtml
+++ b/Final/Views/Visits/Index.cshtml
@@ -13,7 +13,28 @@
 </nav>
 <p>
     <a asp-action="Create">Create New</a>
+    <br />
+    @Html.ActionLink("Show all", "Index")
+
 </p>
+
+
+@using (Html.BeginForm("Index", "Visits", FormMethod.Get))
+{
+    <b>Search By:</b>
+    <br/>
+    <text>Date of Visit</text>
+    @Html.RadioButton("SearchBy", "DateOfVisit", true)
+    <br/>
+
+    <text>Complaint</text>
+    @Html.RadioButton("SearchBy", "Complaint")
+
+    <br />
+    @Html.TextBox("search")
+    <input type="submit" value="Search" />
+}
+
 <table class="table">
     <thead>
         <tr>
@@ -33,30 +54,42 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @if (item.doctor != null)
+                    {
+                        @Html.ActionLink(item.doctor.Name, "Details", "Doctors", new { id = item.DoctorId }, null)
+                    }
+                    else
+                    {
+                        @Html.DisplayFor(modelItem => item.doctor.Name)
+                    }
+                </td>
+                <td>
+                    @if (item.patient != null)
+                    {
+                        @Html.ActionLink(item.patient.Name, "Details", "Patients", new { id = item.PatientId }, null)
+                    }
+                    else
+                    {
+                        @Html.DisplayFor(modelItem => item.patient.Name)
+                    }
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateOfVisit)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Complaint)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
 
-              @Html.ActionLink(item.doctor.Name, "Details", "Doctors", new { id = item.DoctorId }, null)
-
-            </td>
-            <td>
-
-             @Html.ActionLink(item.patient.Name, "Details", "Patients", new { id = item.PatientId }, null)
-
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateOfVisit)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Complaint)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
     </tbody>
 </table>
