--- a/Final/Views/Doctors/Details.cshtml
+++ b/Final/Views/Doctors/Details.cshtml
@@ -40,6 +40,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Address)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Title)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Title)
+        </dd>
     </dl>
 </div>
 <div>
