--- a/Final/Views/Doctors/OrderByOffice.cshtml
+++ b/Final/Views/Doctors/OrderByOffice.cshtml
@@ -1,46 +1,20 @@
 ﻿@model IEnumerable<Final.Models.Doctor>
 
 @{
-    ViewData["Title"] = "Doctors";
+    ViewData["Title"] = "OrderByOffice";
 }
 
-<h1>Doctors</h1>
-<nav>
-    @Html.ActionLink("Home", "Index", "Home") |
-    @Html.ActionLink("Doctors", "Index", "Doctors") |
-    @Html.ActionLink("Patients", "Index", "Patients") |
-    @Html.ActionLink("Visits", "Index", "Visits")
-</nav>
+<h1>OrderByOffice</h1>
+
 <p>
     <a asp-action="Create">Create New</a>
-    @Html.ActionLink("Show all", "Index")
-    @Html.ActionLink("Order By Name", "OrderByName")
-    @Html.ActionLink("Order By Office", "OrderByOffice")
-
-
 </p>
-
-@using (Html.BeginForm("Index", "Doctors", FormMethod.Get))
-{
-    <b>Search By:</b>
-    @Html.RadioButton("SearchBy", "Name", true)
-
-    <text>Doctor Name</text>
-    @Html.RadioButton("SearchBy", "Office")
-
-    <text>Office</text>
-    <br />
-
-    @Html.TextBox("search")
-    <input type="submit" value="Search" />
-}
 <table class="table">
     <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
-           
             <th>
                 @Html.DisplayNameFor(model => model.Office)
             </th>
@@ -65,7 +39,6 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
-            
             <td>
                 @Html.DisplayFor(modelItem => item.Office)
             </td>
